Rename from primer to guide

--- a/src/start.yml
+++ b/src/start.yml
@@ -1,5 +1,5 @@
 ---
-title: "UI/UX Design Primer"
+title: "UI/UX Design Guide"
 subtitle: "Concepts • Terminology • Tactics"
 author: "Edited by Joel Parker Henderson"
 date: "Version 1.3.1"
