--- a/projects/books/formats/pdf/start.yml
+++ b/projects/books/formats/pdf/start.yml
@@ -3,21 +3,27 @@ title: "UI/UX Design Guide"
 subtitle: "Concepts • Terminology • Tactics"
 author: "Edited by Joel Parker Henderson"
 date: "Version 1.3.1"
-titlepage: true
-titlepage-color: "FFFFFF"
-titlepage-text-color: "000000"
-titlepage-rule-color: "CCCCCC"
-titlepage-rule-height: 4
-logo: "files/logo.png"
+description: >
+  Topics for user interface (UI) design and user experience (UX) development,
+  such as information architecture, task analysis, ideation, mockups, use cases,
+  user stories, modeling diagrams, affordances, accessibility, and localization.
+cover-image: "../../README.jpg"
+logo: "../README.jpg"
 logo-width: 100
 page-background:
 page-background-opacity:
 links-as-notes: false
+#lot: true
+#lof: true
 listings-disable-line-numbers: true
 listings-no-page-break: false
 disable-header-and-footer: false
+header-left:
+header-center:
+header-right:
 footer-left: "© Joel Parker Henderson"
 footer-center: "License: CC-BY-NC-SA-4.0"
+footer-right:
 subparagraph: true
-lang: en-US
+lang: "en-US"
 ---
