Add deliberative engagement

--- a/projects/books/formats/epub/start.yml
+++ b/projects/books/formats/epub/start.yml
@@ -15,5 +15,5 @@ disable-header-and-footer: false
 subparagraph: true
 lang: "en-US"
 css: "epub.css"
-rights: "© 2023 Joel Parker Henderson. All rights reserved."
+rights: "© 2023-2024 Joel Parker Henderson. All rights reserved."
 ---
